clusters/home/apps/home/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    goldilocks.fairwinds.com/enabled: "true"
