clusters/home/apps/home/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    external-dns.kubernetes.io/hostname: "hass.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`hass.layertwo.dev`)"
      priority: 10
      services:
      - name: home-assistant
        port: 8123
